v0.2.0
3D(2.5D)
added loading screen
changed how many things work
multithreaded collisions
changed and added more vm system properties
more optimizations
fixed some misc bugs